2014-09-01 Andrew Burgess <andrew.burgess@embecosm.com>
	When editing entries in the `kill-ring' place a header line in the
	edit buffer with a short key guide.  Kill the edit buffer when
	editing is finished rather than just burying it.  Add an abort key
	mapping to allow the edit buffer to be closed without saving the
	changes.

2014-09-01 Andrew Burgess <andrew.burgess@embecosm.com>
	Adjust mechanism used to restore buffer and window before
	inserting items from the `kill-ring', this should resolve issues
	when there are multiple frames or windows open onto the same
	buffer with different values for point.

2014-08-29 Andrew Burgess <andrew.burgess@embecosm.com>
	Remove `browse-kill-ring-highlight-inserted-item-style' and
	instead allow `browse-kill-ring-highlight-inserted-item' to take
	the value `pulse' or `solid' as well as `nil' and `t'.  It's type
	is changed to `choice' accordingly.  The value `t' now means use
	the default highlight style, which is currently `pulse', `nil'
	still means turn off highlighting of inserted items.

2014-08-25 Andrew Burgess <andrew.burgess@embecosm.com>
	Highlighting of the current entry in the *Kill Ring* buffer now
	works with manual point movement rather than just with the
	`browse-kill-ring-forward' function.  Also moving the point with
	the mouse will also update the highlighting correctly now.

2014-08-20 Andrew Burgess <andrew.burgess@embecosm.com>
	Added variable `browse-kill-ring-highlight-inserted-item-style'
	which selects the style to use when highlighting the inserted kill
	ring item.  The choices are `solid' (the old style, solid face for
	0.5 seconds) and `pulse' (which uses the pulse library from cedet,
	included with recent versions of emacs, to fade the highlighting
	out over 0.5 seconds).  The default is `pulse' but this will fall
	back to `solid' if the pulse library is not available.

2014-08-18 Andrew Burgess <andrew.burgess@embecosm.com>
	(browse-kill-ring-setup) Don't access